[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gowallet-sdk"
version = "1.0.0"
description = "Official Python SDK for the GoWallet API – HMAC-authenticated wallet, withdrawal, and IPN verification."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["gowallet", "crypto", "wallet", "sdk", "hmac"]
authors = [
    {name = "Mesh Technology", url = "https://github.com/Mesh-Technology"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/Mesh-Technology/gowallet-sdk-python"
Repository = "https://github.com/Mesh-Technology/gowallet-sdk-python"
